# pysidtracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adoption.md  design.md  oracle-testing.md
src/: pysidtracker_pytest.py
src/pysidtracker/: __init__.py  _scan.py  audio.py  base.py  cadence.py  cli.py  codescan.py  d64.py  decrunch.py  detect.py  emu.py  errors.py  formats.py  header.py  image.py  io.py  maincli.py  mos6502.py  notefreq.py  oracle.py  player.py  registers.py  reglog.py  source.py  testing.py  trace.py
tests/: conftest.py  helpers.py  test_audio.py  test_audio_helpers.py  test_base.py  test_cadence.py  test_cadence_latch.py  test_cli.py  test_codescan.py  test_codescan_raw.py  test_d64.py  test_decrunch.py  test_detect.py  test_detect_entry.py  test_emu.py  test_errors_factory.py  test_header.py  test_header_writer.py  test_image.py  test_image_accessors.py  test_io.py  test_maincli.py  test_mos6502.py  test_notefreq.py  test_oracle.py  test_oracle_hvsc.py  test_player.py  test_pytest_plugin.py  test_registers.py  test_registers_new.py  test_reglog.py  test_scan.py  test_sidtrace_oracle.py  test_testing.py  test_testing_fixtures.py  test_trace.py
