[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysidtracker"
version = "0.2.0"
description = "Shared base for pure-Python C64 SID tracker parsers: PSID/RSID container, loaded-image model, and packed/relocating playroutine detection"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["sid", "c64", "psid", "rsid", "tracker", "chiptune"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.optional-dependencies]
# Unpacking packed/relocating tunes runs their 6502 init routine in py65;
# direct-load tunes are detected with stdlib only.
emu = ["py65>=1.1"]
# numpy accelerates the image anchor scan; a pure-stdlib fallback is used
# when it is not installed.
fast = ["numpy>=1.23"]
dev = [
    "black>=24",
    "numpy>=1.23",
    "py65>=1.1",
    "pylint>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
]

[project.urls]
Homepage = "https://github.com/anarkiwi/pysidtracker"
Source = "https://github.com/anarkiwi/pysidtracker"
Issues = "https://github.com/anarkiwi/pysidtracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -n auto"

[tool.coverage.run]
branch = true
source = ["pysidtracker"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "unused-import",
    "unused-argument",
    "cell-var-from-loop",
    "unused-variable",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "reimported",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
