[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysidtracker"
version = "0.6.0"
description = "Shared base for pure-Python C64 SID tracker parsers: PSID/RSID container, loaded-image model, and packed/relocating playroutine detection"
readme = "README.md"
# pydexomizer (a core dependency) requires Python >= 3.11.
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["sid", "c64", "psid", "rsid", "tracker", "chiptune"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
# Core dependencies. py65: detection unpacks packed/relocating tunes by running
# their 6502 init routine (run_init / trace_init / playroutine_cadence), and
# every dependent parser relies on that path. pydexomizer: native pure-Python
# exomizer decrunch (native_decrunch), the init-free alternative unpack path.
dependencies = ["py65>=1.1", "pydexomizer>=0.1"]

[project.optional-dependencies]
# numpy accelerates the image anchor scan; a pure-stdlib fallback is used
# when it is not installed.
fast = ["numpy>=1.23"]
# Audio rendering (pysidtracker.audio) drives an emulated SID via pyresidfp;
# everything else works without it.
audio = ["pyresidfp>=0.17"]
dev = [
    "black>=24",
    "numpy>=1.23",
    "py65>=1.1",
    "pydexomizer>=0.1",
    "pylint>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    # Decompress the sidtrace oracle's zstd CSV traces (oracle comparison tests).
    "zstandard>=0.21",
]

[project.urls]
Homepage = "https://github.com/anarkiwi/pysidtracker"
Source = "https://github.com/anarkiwi/pysidtracker"
Issues = "https://github.com/anarkiwi/pysidtracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Oracle comparison tests need Docker + network; run them in a dedicated CI job
# via ``-m oracle`` (they are excluded from the default coverage matrix run).
addopts = "-ra -n auto -m 'not oracle'"
markers = ["oracle: byte-exact comparison against the sidtrace Docker oracle"]

[tool.coverage.run]
branch = true
source = ["pysidtracker"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "unused-import",
    "unused-argument",
    "cell-var-from-loop",
    "unused-variable",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "reimported",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
