[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysidtracker"
version = "0.9.0"
description = "Shared base for pure-Python C64 SID tracker parsers: PSID/RSID container, loaded-image model, and packed/relocating playroutine detection"
readme = "README.md"
# pydexomizer (a core dependency) requires Python >= 3.11.
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["sid", "c64", "psid", "rsid", "tracker", "chiptune"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
# Core dependencies. py65: detection unpacks packed/relocating tunes by running
# their 6502 init routine (run_init / trace_init / playroutine_cadence), and
# every dependent parser relies on that path. pydexomizer: native pure-Python
# exomizer decrunch (native_decrunch), the init-free alternative unpack path.
# pyresidfp: the emulated SID every tracker's WAV render (pysidtracker.audio)
# drives -- core, not an extra, because rendering audio is core functionality.
# numpy: sample buffers and the image anchor scan.
dependencies = ["py65>=1.1", "pydexomizer>=0.1", "pyresidfp>=0.17", "numpy>=1.23"]

[project.optional-dependencies]
dev = [
    "black>=24",
    "pylint>=3",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    # Decompress the sidtrace oracle's zstd CSV traces (oracle comparison tests).
    "zstandard>=0.21",
]

[project.scripts]
# The one CLI every dependent format plugs into (pysidtracker.formats): info /
# reglog / wav for any installed format, plus that format's own subcommands. So
# a format package registers a SidFormat instead of shipping its own CLI binary.
pysidtracker = "pysidtracker.maincli:main"
# Pre-cache HVSC tunes into the shared tune cache (CI populates a persisted
# actions/cache before the suite runs).
pysid-tune-fetch = "pysidtracker.testing:main"

[project.entry-points.pytest11]
# The `hvsc` / `sidtrace_oracle` / `disk_prgs` fixtures ship to every dependent
# suite with no per-package conftest, just by installing pysidtracker. The plugin
# is a standalone top-level module (not a pysidtracker submodule) so loading it
# does not import the package before pytest-cov starts tracing.
pysidtracker = "pysidtracker_pytest"

[project.urls]
Homepage = "https://github.com/anarkiwi/pysidtracker"
Source = "https://github.com/anarkiwi/pysidtracker"
Issues = "https://github.com/anarkiwi/pysidtracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# The pytest plugin is a standalone top-level module (see [pytest11] above).
py-modules = ["pysidtracker_pytest"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# Oracle comparison tests need Docker + network; run them in a dedicated CI job
# via ``-m oracle`` (they are excluded from the default coverage matrix run).
addopts = "-ra -n auto -m 'not oracle and not exomizer'"
markers = [
    "oracle: byte-exact comparison against the sidtrace Docker oracle",
    "exomizer: real exomizer round-trip (needs the exomizer cruncher; own CI job)",
]

[tool.coverage.run]
branch = true
source = ["pysidtracker"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "unused-import",
    "unused-argument",
    "cell-var-from-loop",
    "unused-variable",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "reimported",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
